examples/spanned_err.run.stderr
Error: error: "kaboom"
 --> examples/spanned_err.rs:4:9
  |
4 |     Err(Spanned::here("kaboom"))?;
  |         ^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
